--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans|Libre+Baskerville|Suranna');
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Libre Baskerville', serif;
+  width: 100%;
+  color: #222;
+  overflow-y: scroll;
+}
+
+html {
+  width: 100%;
+  box-sizing: border-box;
 }
