--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,18 @@
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans|Libre+Baskerville|Suranna');
 
+html,
 body {
   margin: 0;
   padding: 0;
   font-family: 'Libre Baskerville', serif;
   width: 100%;
   color: #222;
-  overflow-y: scroll;
+  box-sizing: border-box;
+  height: 100vh;
+  overflow: hidden;
 }
 
-html {
-  width: 100%;
-  box-sizing: border-box;
+#root,
+.App {
+  overflow: hidden;
 }
